task-8: Implement task 8
This commit implements following:
- Add Multi Create endpoint
- Add Update endpoint
- Trace multi create endpoint]
- Add CUD request metrics for prometheus
- Send action notifications to kafka
