# internal/api/request.go
@@ -3,29 +3,42 @@ package api
 import (
 	"context"
 	"fmt"
+	"github.com/opentracing/opentracing-go"
+	"github.com/ozoncp/ocp-resource-api/internal/flusher"
+	"github.com/ozoncp/ocp-resource-api/internal/metrics"
 	"github.com/ozoncp/ocp-resource-api/internal/models"
+	"github.com/ozoncp/ocp-resource-api/internal/producer"
 	"github.com/ozoncp/ocp-resource-api/internal/repo"
 	desc "github.com/ozoncp/ocp-resource-api/pkg/ocp-resource-api"
+	"github.com/rs/zerolog/log"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
+	"time"
 )
+
+const chunkSize = 10
 
 //TODO add a tests as improvements
 type api struct {
 	desc.UnimplementedOcpResourceApiServer
-	repo repo.Repo
+	repo        repo.Repo
+	flusher     flusher.Flusher
+	msgProducer producer.Producer
 }
 
 func (a *api) CreateResourceV1(ctx context.Context, req *desc.CreateResourceRequestV1) (*desc.ResourceV1, error) {
-	createdResource, err := a.repo.AddEntity(ctx, models.NewResourceNotPersisted(req.GetUserId(), req.GetType(), req.GetStatus()))
+	a.notifyProducer(ctx, "add")
+	createdResource, err := a.repo.AddEntity(ctx, models.NewNotPersistedResource(req.GetUserId(), req.GetType(), req.GetStatus()))
 	if err != nil {
 		return nil, status.Error(codes.Internal, fmt.Sprintf("request err: %v", err))
 	}
 	rsp := mapResourceToResourceV1(createdResource)
+	metrics.IncReqCounter("add")
 	return rsp, nil
 }
 
 func (a *api) DescribeResourceV1(ctx context.Context, req *desc.DescribeResourceRequestV1) (*desc.ResourceV1, error) {
+	a.notifyProducer(ctx, "get")
 	resource, err := a.repo.DescribeEntity(ctx, req.GetResourceId())
 	if err != nil {
 		return nil, status.Error(codes.Internal, fmt.Sprintf("request err: %v", err))
@@ -35,6 +48,7 @@ func (a *api) DescribeResourceV1(ctx context.Context, req *desc.DescribeResource
 }
 
 func (a *api) ListResourcesV1(ctx context.Context, req *desc.ListResourcesRequestV1) (*desc.ListResourcesResponseV1, error) {
+	a.notifyProducer(ctx, "list")
 	resourcesPtr, err := a.repo.ListEntities(ctx, req.GetLimit(), req.GetOffset())
 	if err != nil {
 		return nil, status.Error(codes.Internal, fmt.Sprintf("request err: %v", err))
@@ -49,12 +63,54 @@ func (a *api) ListResourcesV1(ctx context.Context, req *desc.ListResourcesReques
 }
 
 func (a *api) RemoveResourceV1(ctx context.Context, req *desc.RemoveResourceRequestV1) (*desc.RemoveResourceResponseV1, error) {
+	a.notifyProducer(ctx, "remove")
 	err := a.repo.RemoveEntity(ctx, req.GetResourceId())
 	if err != nil {
 		return nil, status.Error(codes.Internal, fmt.Sprintf("request err: %v", err))
 	}
 	rsp := desc.RemoveResourceResponseV1{}
+	metrics.IncReqCounter("remove")
 	return &rsp, nil
+}
+
+func (a *api) MultiCreateResourcesV1(ctx context.Context, req *desc.MultiCreateResourceRequestV1) (*desc.MultiCreateResourceResponseV1, error) {
+	a.notifyProducer(ctx, "multi add")
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("MultiCreateResourcesV1")
+	defer span.Finish()
+	resources := make([]models.Resource, 0, cap(req.GetResources()))
+	for i, res := range req.GetResources() {
+		resources[i] = models.NewNotPersistedResource(res.UserId, res.Type, res.Status)
+	}
+
+	notSaved := a.flusher.Flush(ctx, resources, span)
+	if len(notSaved) != 0 {
+		return nil, status.Error(codes.Internal, fmt.Sprint("flush err"))
+	}
+	rsp := desc.MultiCreateResourceResponseV1{}
+	for _ = range resources {
+		metrics.IncReqCounter("add")
+	}
+	return &rsp, nil
+}
+
+func (a *api) UpdateResourceV1(ctx context.Context, req *desc.UpdateResourceRequestV1) (*desc.ResourceV1, error) {
+	a.notifyProducer(ctx, "update")
+	resource, err := a.repo.UpdateEntity(ctx, req.GetId(), req.GetFields().GetUserId(), req.GetFields().GetType(), req.GetFields().GetStatus())
+	if err != nil {
+		return nil, status.Error(codes.Internal, fmt.Sprintf("request err: %v", err))
+	}
+	return mapResourceToResourceV1(resource), nil
+}
+
+func (a *api) notifyProducer(_ context.Context, operation string) {
+	err := a.msgProducer.Send(producer.EventMessage{
+		Timestamp: time.Now().Unix(),
+		Operation: operation,
+	})
+	if err != nil {
+		log.Err(err).Msgf("Issue during producer notification")
+	}
 }
 
 func mapResourceToResourceV1(resource *models.Resource) *desc.ResourceV1 {
@@ -67,6 +123,7 @@ func mapResourceToResourceV1(resource *models.Resource) *desc.ResourceV1 {
 	return &res
 }
 
-func NewOcpResourceApi(repo *repo.Repo) (desc.OcpResourceApiServer, error) {
-	return &api{repo: *repo}, nil
+func NewOcpResourceApi(repo repo.Repo, producer producer.Producer) (desc.OcpResourceApiServer, error) {
+	newFlusher := flusher.NewFlusher(chunkSize, repo)
+	return &api{repo: repo, flusher: newFlusher, msgProducer: producer}, nil
 }
