# swagger/api.swagger.json
@@ -81,6 +81,79 @@
         ]
       }
     },
+    "/v1/resources/batch": {
+      "post": {
+        "summary": "Update few new respirce",
+        "operationId": "OcpResourceApi_MultiCreateResourcesV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiMultiCreateResourceResponseV1"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiMultiCreateResourceRequestV1"
+            }
+          }
+        ],
+        "tags": [
+          "OcpResourceApi"
+        ]
+      }
+    },
+    "/v1/resources/{id}": {
+      "put": {
+        "summary": "Update few new respirce",
+        "operationId": "OcpResourceApi_UpdateResourceV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiResourceV1"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiUpdateResourceFieldsV1"
+            }
+          }
+        ],
+        "tags": [
+          "OcpResourceApi"
+        ]
+      }
+    },
     "/v1/resources/{resource_id}": {
       "get": {
         "summary": "Return description of resource by id",
@@ -113,7 +186,6 @@
         ]
       },
       "delete": {
-        "summary": "Сreate few new resources",
         "operationId": "OcpResourceApi_RemoveResourceV1",
         "responses": {
           "200": {
@@ -173,6 +245,26 @@
         }
       }
     },
+    "apiMultiCreateResourceRequestV1": {
+      "type": "object",
+      "properties": {
+        "resources": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiCreateResourceRequestV1"
+          }
+        }
+      }
+    },
+    "apiMultiCreateResourceResponseV1": {
+      "type": "object",
+      "properties": {
+        "added": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
     "apiRemoveResourceResponseV1": {
       "type": "object"
     },
@@ -183,6 +275,23 @@
           "type": "string",
           "format": "uint64"
         },
+        "user_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "type": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "status": {
+          "type": "string",
+          "format": "uint64"
+        }
+      }
+    },
+    "apiUpdateResourceFieldsV1": {
+      "type": "object",
+      "properties": {
         "user_id": {
           "type": "string",
           "format": "uint64"
